fixed icon size on mobile

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -609,6 +609,10 @@ ul.why li {
   font-size: 120%;
 }
 
+.featureIcon {
+  width: 3em;
+}
+
 .featureIcon:hover, .featureTitle:hover {
   cursor: pointer;
 }
